REST API for student management with CRUD, search, pagination, sorting, DTO mapping, and proper error handling, tested via Postman